# fullsend

./: .codecov.yml  .dockerignore  .gitignore  .gitlint  .golangci.yml  .goreleaser.yml  .pinact.yaml  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CLAUDE.md  CODEOWNERS  COMMITS.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  action.yml  eslint.config.js  gitlint_rules_test.py  go.mod  go.sum  mise.toml  mkdocs.yml  package-lock.json  package.json  renovate.json  ruff.toml  vite.config.ts
experiments/reasoning-monitor/: README.md  pyproject.toml  results.md  runner.py
experiments/reasoning-monitor/monitor/: __init__.py  canary_hook.py  interface.py  llm_monitor.py  tool_allowlist.py
experiments/reasoning-monitor/payloads/: adaptive-allowlist-only.yaml  adaptive-normal-reasoning.yaml  adaptive-reasoning-mimicry.yaml  adaptive-tool-args-exfil.yaml  adaptive-truncation-exploit.yaml  base64-encoded.yaml  benign-control.yaml  benign-cross-reference.yaml  benign-dependency-update.yaml  benign-docs-update.yaml  benign-multi-label.yaml  benign-security-bug.yaml  credential-exfil.yaml  hidden-html-comment.yaml  indirect-chain-of-thought.yaml  indirect-ci-output.yaml  indirect-code-comment.yaml  indirect-external-link.yaml  indirect-multistep.yaml  indirect-poisoned-dependency.yaml  indirect-review-feedback.yaml  multi-stage.yaml  obvious-injection.yaml  role-confusion.yaml  social-engineering.yaml  unicode-homoglyph.yaml  zero-width-chars.yaml
experiments/reasoning-monitor/tests/: __init__.py  test_hooks.py  test_integration.py  test_monitor.py  (+2 more)
(+1900 files in other folders)
